--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Paradoxic studios</title>
+    <title>Paradoxic Studios</title>
     <style>
         * {
             margin: 0;
@@ -63,4 +63,11 @@
             100% { color: #ffeb3b; }
         }
     </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to Paradoxic Studios</h1>
+        <p>Gyatt</p></p>
+    </div>
+</body>
 </html>
