--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #000000, #1a1a2e);
+            background: linear-gradient(135deg, #3b3b98, #8e44ad);
             color: #ffffff;
             overflow: hidden;
             animation: bgPulse 10s infinite alternate;
         }
 
         @keyframes bgPulse {
-            0% { background: linear-gradient(135deg, #000033, #1a1a3e); }
-            100% { background: linear-gradient(135deg, #000011, #1a1a2e); }
+            0% { background: linear-gradient(135deg, #3b3b98, #6a0dad); }
+            100% { background: linear-gradient(135deg, #3a1f5d, #8e44ad); }
         }
 
         .container {
             text-align: center;
-            background: rgba(10, 10, 30, 0.8);
+            background: rgba(20, 20, 50, 0.8);
             padding: 40px;
             border-radius: 15px;
             box-shadow: 0 30px 60px rgba(0, 0, 0, 0.7);
@@ -47,14 +47,14 @@
         h1 {
             font-size: 2.8em;
             margin-bottom: 20px;
-            color: #3b9eff;
+            color: #d1a3ff;
             text-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
             animation: textGlow 4s ease-in-out infinite alternate;
         }
 
         @keyframes textGlow {
-            0% { color: #3b9eff; }
-            100% { color: #79c7ff; }
+            0% { color: #c084f5; }
+            100% { color: #f0c1ff; }
         }
 
         p {
@@ -69,7 +69,7 @@
             padding: 10px 25px;
             font-size: 1.1em;
             color: #fff;
-            background: linear-gradient(135deg, #0066cc, #003366);
+            background: linear-gradient(135deg, #9b59b6, #6a0dad);
             border: none;
             border-radius: 8px;
             cursor: pointer;
@@ -78,7 +78,7 @@
         }
 
         button:hover {
-            background: linear-gradient(135deg, #003366, #0066cc);
+            background: linear-gradient(135deg, #6a0dad, #9b59b6);
             transform: scale(1.05);
         }
     </style>
