--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         }
     </style>
 </head>
+<link rel="shortcut icon" type="image/png" href="favicon.ico">
 <body>
     <div class="container">
         <h1>Welcome to Paradoxic Studios</h1>
