--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #3b3b98, #8e44ad);
+            background: linear-gradient(135deg, #1414d6, #061850);
             color: #ffffff;
             overflow: hidden;
             animation: bgPulse 10s infinite alternate;
@@ -31,12 +31,12 @@
 
         .container {
             text-align: center;
-            background: rgba(4, 4, 204, 0.8);
+            background: rgba(20, 20, 50, 0.8);
             padding: 40px;
             border-radius: 15px;
             box-shadow: 0 30px 60px rgba(0, 0, 0, 0.7);
             max-width: 600px;
-            width: 100%;
+            width: 90%;
             transition: transform 0.3s, box-shadow 0.3s;
         }
 
