--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #1414d6, #061850);
+            background-image: url('ParaLong.jpg'); 
+            background-size: cover; 
+            background-position: center;
+            background-attachment: fixed;
             color: #ffffff;
             overflow: hidden;
             animation: bgPulse 10s infinite alternate;
