--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Striker-67/Paradoxic-studios/refs/heads/main/FavIcon.ico" />
     <title>Paradoxic Studios</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://striker-67.github.io/Paradoxic-studios/Style/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
 
 <footer>
     <div class="container">
-        <a href="/privacypolicy">Privacy Policy</a>
+        <a href="https://striker-67.github.io/Paradoxic-studios/privacypolicy">Privacy Policy</a>
     </div>
 </footer>
 
